--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "0.17.1",
     "debug": "2.6.8",
     "openurl": "1.1.1",
+    "qrcode-terminal": "^0.12.0",
     "yargs": "6.6.0"
   },
   "devDependencies": {
